--- a/auth/css/dashboard.css
+++ b/auth/css/dashboard.css
@@ -38,9 +38,11 @@
 }
 
 #preview {
-    height: 100vh;
+    min-height: 100vh;
+    height: fit-content;
     padding: 20px;
     background-color: blueviolet;
+
 }
 
 
