--- a/auth/css/dashboard.css
+++ b/auth/css/dashboard.css
@@ -32,6 +32,22 @@
 
 }
 
+.navspan {
+    display: flex;
+    height: 100%;
+    width: 20%;
+    align-items: center;
+    justify-content: space-around;
+
+}
+
+.navbutton {
+    width: 80px;
+    height: 50px;
+    background-color: whitesmoke;
+    border-radius: 15px;
+}
+
 #header {
     margin: 20px;
     font-size: 48px;
